--- a/assets/sass/Base/_dev-b-global-main.scss
+++ b/assets/sass/Base/_dev-b-global-main.scss
@@ -312,6 +312,7 @@ p{
                 top: 15px;
                 font-size: 15px;
                 cursor: pointer;
+                color: var(--dev-b-color-heading);
             }
         }
         
