--- a/assets/sass/contact.scss
+++ b/assets/sass/contact.scss
@@ -1,5 +1,6 @@
 @import "./Layouts/header_2";
 @import "./Layouts/header_1";
+@import "./Layouts/menu_right";
 @import "./Layouts/footer";
 @import "./Themes/mixins";
 
